KUBE/INGRESS-APPLICATION/Employee_management_system/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: cloudethix-1
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: docker.io/payalkharat/kubernetes-react-app:backend-v1

          ports:
            - containerPort: 5000
