KUBE/INGRESS-APPLICATION/Employee_management_system/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cloudethix-1
spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: docker.io/payalkharat/kubernetes-react-app:frontend-v2  
          imagePullPolicy: Always

          ports:
            - containerPort: 80
