KUBE/INGRESS-APPLICATION/Employee_management_system/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: cloudethix-1
spec:
  type: ClusterIP

  selector:
    app: mysql

  ports:
    - port: 3306
      targetPort: 3306
